--- a/Tutorial.html
+++ b/Tutorial.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="stylesheet" href="./style/homeStyles.css" />
-		<link rel="stylesheet" href="./style/navbarStyles.css" />
-		<link rel="stylesheet" href="./index.css" />
-		<link rel="stylesheet" href="./style/tutorialStyles.css"/>
+		<link rel="stylesheet" href="./css/navbarStyles.css" />
+		<link rel="stylesheet" href="./css/index.css" />
+		<link rel="stylesheet" href="./css/tutorialStyles.css"/>
 
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 		<title>Tutorial</title>
 	</head>
+
 	<body>
+		<!-- navbar -->
 		<header id="navbar">
 			<nav class="navbar-container container">
 				<a href="./Home.html" class="home-link">
@@ -44,10 +46,11 @@
 			</nav>
 		</header>
 
+		<!-- logo and title -->
 		<img class="logo" src="./img/logo.png" />
-		<h1 class="title-tutorial"><span class="tutorial-title-side1">TUTO</span><span class="tutorial-title-side2">RIAL</span></h1>
+		<h1 class="title"><span class="tutorial-title-side1">TUTO</span><span class="tutorial-title-side2">RIAL</span></h1>
 
-		<div class="tutorial-first-container">
+		<div class="tutorial-container">
 			<div class="logo-desc">
 				<img src="./img/gif/Air_Death_Right.gif" class="logo-img-desc">
 			</div>
@@ -58,93 +61,99 @@
 			</p>
 		</div>
 
+		<!-- divider -->
 		<div class="floor">
 			<img src="./img/gif/floor.png" class="floor-img-desc">
 			<img src="./img/gif/floor.png" class="floor-img-desc">
 			<img src="./img/gif/floor.png" class="floor-img-desc">
 		</div>
 		
-		<div class="sections">
+		<!-- content -->
+		<div class="mechanics-container-1">
 			<h1>ARROW KEYS</h1>
 			<p>Use the arrow buttons to navigate each level and reach the door to the next level!</p>
 		</div>
 
 		<section>
-			<div class="key">
+			<div class="mechanic-1">
 				<img src="./img/gif/Normal_Run_Left.gif" class="logo-img-desc">
 					<p>Left Arrow Key</p>
 					<p>Move Left</p>
 			</div>
 
-			<div class="key">
+			<div class="mechanic-1">
 				<img src="./img/gif/Normal_Run_Right.gif" class="logo-img-desc">
 					<p>Right Arrow Key</p>
 					<p>Move Right</p>
 			</div>
 
-			<div class="key">
+			<div class="mechanic-1">
 				<img src="./img/gif/Normal_Jump_Right.gif" class="logo-img-desc">
 					<p>Up Arrow Key</p>
 					<p>Jump Up</p>
 			</div>
 
-			<div class="key">
+			<div class="mechanic-1">
 				<img src="./img/gif/Normal_Enter.gif" class="logo-img-desc">
 					<p>Down Arrow Key</p>
 					<p>Enter Door</p>
 			</div>
 		</section>
 
+		<!-- divider -->
 		<div class="floor">
 			<img src="./img/gif/floor.png" class="floor-img-desc">
 			<img src="./img/gif/floor.png" class="floor-img-desc">
 			<img src="./img/gif/floor.png" class="floor-img-desc">
 		</div>
 
-		<div class="sections">
+		<!-- content -->
+		<div class="mechanics-container-2">
 			<h1>LETTER KEYS</h1>
 			<p>Switch between the four elemental states unlocked individually along the way to navigate obstacles!</p>
 		</div>
 
 		<section>
-			<div class="key">
+			<div class="mechanic-2">
 				<img src="./img/gif/Water_Idle_Right.gif" class="logo-img-desc">
 					<p>W Key</p>
 					<p>Switch to Water</p>
 			</div>
 
-			<div class="key">
+			<div class="mechanic-2">
 				<img src="./img/gif/Air_Idle_Right.gif" class="logo-img-desc">
 					<p>A Key</p>
 					<p>Switch to Air</p>
 			</div>
 
-			<div class="key">
+			<div class="mechanic-2">
 				<img src="./img/gif/Fire_Idle_Right.gif" class="logo-img-desc">
 					<p>S Key</p>
 					<p>Switch to Fire</p>
 			</div>
 
-			<div class="key">
+			<div class="mechanic-2">
 				<img src="./img/gif/Earth_Idle_Right.gif" class="logo-img-desc">
 					<p>D Key</p>
 					<p>Switch to Earth</p>
 			</div>
 		</section>
 
+		<!-- divider -->
 		<div class="floor">
 			<img src="./img/gif/floor.png" class="floor-img-desc">
 			<img src="./img/gif/floor.png" class="floor-img-desc">
 			<img src="./img/gif/floor.png" class="floor-img-desc">
 		</div>
 
-		<div class="sections">
+		<!-- content -->
+		<div class="mechanics-container-1">
 			<h1>ELEMENTAL OBSTACLES</h1>
 			<p>There are numerous elemental obstacles within each level, use the power of the elements accordingly to overcome them!</p>
 		</div>
 
 		<section>
-			<div class="key">
+			<div class="mechanic-1">
 				<div class="img">
 					<img src="./img/gif/Water_Idle_Right.gif" class="logo-img-desc">
 					<img src="./img/gif/Fire_Pit_Tile.gif" class="img-desc">
@@ -153,7 +162,7 @@
 				<p>Pass fire pits by extinguishing them with water</p>
 			</div>
 
-			<div class="key">
+			<div class="mechanic-1">
 				<div class="img">
 					<img src="./img/gif/Air_Idle_Right.gif" class="logo-img-desc">
 					<img src="./img/gif/Water_Pit_Tile.gif" class="img-desc">
@@ -162,7 +171,7 @@
 				<p>Cross water pits by freezing the water with air</p>
 			</div>
 
-			<div class="key">
+			<div class="mechanic-1">
 				<div class="img">
 					<img src="./img/gif/Fire_Idle_Right.gif" class="logo-img-desc">
 					<img src="./img/gif/Ice_2.png" class="img-desc">
@@ -172,21 +181,23 @@
 			</div>
 		</section>
 
+		<!-- divider -->
 		<div class="floor">
 			<img src="./img/gif/floor.png" class="floor-img-desc">
 			<img src="./img/gif/floor.png" class="floor-img-desc">
 			<img src="./img/gif/floor.png" class="floor-img-desc">
 		</div>
 
-		<div class="sections">
+		<!-- content -->
+		<div class="mechanics-container-2">
 			<h1>REGULAR OBSTACLES</h1>
 			<p>Besides elemental obstacles, there are also regular obstacles!</p>
 		</div>
 		
 		<section>
-			<div class="key">
+			<div class="mechanic-2">
 				<div class="img">
-					<img src="./img/gif/Water_Idle_Right.gif" class="logo-img-desc">
+					<img src="./img/gif/Earth_Idle_Right.gif" class="logo-img-desc">
 					<img src="./img/gif/Spike_Pit.png" class="img-desc">
 				</div>
 
@@ -194,12 +205,14 @@
 			</div>
 		</section>
 
+		<!-- divider -->
 		<div class="floor">
 			<img src="./img/gif/floor.png" class="floor-img-desc">
 			<img src="./img/gif/floor.png" class="floor-img-desc">
 			<img src="./img/gif/floor.png" class="floor-img-desc">
 		</div>
 
+		<!-- footer -->
 		<footer class="background">
 			<p class="text-footer">
 				Copyright © All Rights are Reserved
